--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 }
 body{
-  background-color: rgb(59, 58, 58);
+  background-color: rgb(206, 206, 206);
 }
 #numberPad div {
   width: 200px;
@@ -44,7 +44,6 @@ body{
 
 #sl>h5 {
   display: inline-block;
-  font-family: Arial, Helvetica, sans-serif;
   width: 100px;
   font-size: 20px
 }
@@ -64,7 +63,7 @@ button:hover {
 
 #output h1 {
   display: inline;
-  font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 #hnum1 {
@@ -114,7 +113,7 @@ button:hover {
 }
 
 #popup{
-  font-family: arial;
+  
   position: absolute;
   top:40%;
   right: 25%;
@@ -128,15 +127,6 @@ button:hover {
   50px;
   padding: 5px;
   display: none;
-}
-
-#popup button {
-  background-color: #96d35f;
-  width: 100px;
-  height: 50px;
-  border-radius: 10px;
-  font-size: 15px;
-  border: 0px
 }
 
 @keyframes greens{
@@ -154,21 +144,48 @@ button:hover {
   animation: no;
   animation-duration: 1s;
 }
-#time{
-  font-family: Arial, Helvetica, sans-serif;
-}
-p{
-  font-family: Arial, Helvetica, sans-serif;
-  position: relative;
-  left: 100px;
-  bottom: 25px 
-}
 .large{
-  font-family: Arial, Helvetica, sans-serif;
+  
   font-size: 60px;
   background-color: rgb(143, 143, 143);
   width: 350px;
   text-align: center;
   border-radius: 10px;
 }
-
+#modes{
+  width:250px;
+  height: 150px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 10px 10px 50px;
+}
+body{
+  font-family: monospace, Helvetica, sans-serif;
+}
+#modes button{
+  margin-top: auto;
+  text-align: center;
+}
+#modes{
+  margin: 50px;
+  padding: 50px
+}
+#memo{
+  font-size: 50px;
+  width: 300px;
+  height: 50px;
+  border-radius: 10px;
+}
+.gb{
+  background-color: #96d35f;
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 15px;
+  border: 0px
+}
+.relat{
+  position: relative;
+  bottom: 50px;
+  margin-right: 500px;
+}
