--- a/style2.css
+++ b/style2.css
@@ -1,204 +1,319 @@
 #numberPad {
-    background-color: rgb(67, 67, 67);
-    height: 250px;
-    width: 200px;
-    border-radius: 10px;
-  
-  }
-  body{
-    background-color: rgb(206, 206, 206);
-  }
-  #numberPad div {
-    width: 200px;
-    padding-left: 5px;
-    padding-top: 1px;
-  }
-  
-  #numberPad>div>button {
-    width: 50px;
-    height: 50px;
-    margin: 5px;
-    background-color: hsl(0, 0%, 45%);
-    border: 0px;
-    border-radius: 60%;
-    font-size: 18px;
-  }
-  
-  #marg {
-    margin-left: 54px
-  }
-  
-  #output {
+  background-color: rgb(67, 67, 67);
+  height: 250px;
+  width: 200px;
+  border-radius: 10px;
+
+}
+
+body {
+  background-color: rgb(206, 206, 206);
+}
+
+#numberPad div {
+  width: 200px;
+  padding-left: 5px;
+  padding-top: 1px;
+}
+
+#numberPad>div>button {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  background-color: hsl(0, 0%, 45%);
+  border: 0px;
+  border-radius: 60%;
+  font-size: 18px;
+}
+
+#marg {
+  margin-left: 54px
+}
+
+#output {
+  background-color: rgb(120, 120, 120);
+  width: 175px;
+  height: 40px;
+  border-radius: 10px;
+  padding: 20px;
+  padding-right: 5px;
+
+}
+
+.floats {
+  float: left;
+}
+
+#sl>h5 {
+  display: inline-block;
+  width: 100px;
+  font-size: 20px
+}
+
+#sl {
+  background-color: hsl(0, 0%, 58%);
+  border-radius: 10px;
+  margin-bottom: 20px;
+  width: 250px;
+  padding-right: 50px;
+  text-align: center;
+  clear: both;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+#output h1 {
+  display: inline;
+
+}
+
+#hnum1 {
+  font-size: 100px;
+}
+
+@keyframes no {
+  0% {
     background-color: rgb(120, 120, 120);
-    width: 175px;
-    height: 40px;
-    border-radius: 10px;
-    padding: 20px;
-    padding-right: 5px;
-  
   }
-  
-  .floats {
-    float: left;
+
+  50% {
+    background-color: rgb(255, 0, 0);
   }
-  
-  #sl>h5 {
-    display: inline-block;
-    width: 100px;
-    font-size: 20px
+
+  100% {
+    background-color: rgb(120, 120, 120);
   }
-  
-  #sl {
-    background-color: hsl(0, 0%, 58%);
-    border-radius: 10px;
-    margin-bottom: 20px;
-    width: 250px;
-    padding-right: 50px;
-    text-align: center;
+}
+
+@keyframes no2 {
+  0% {
+    background-color: rgb(120, 120, 120);
   }
-  
-  button:hover {
-    opacity: 0.8;
+
+  50% {
+    background-color: rgb(255, 0, 0);
   }
-  
-  #output h1 {
-    display: inline;
-    
+
+  100% {
+    background-color: rgb(120, 120, 120);
   }
-  
-  #hnum1 {
-    font-size: 100px;
+}
+
+@keyframes no3 {
+  0% {
+    background-color: rgb(120, 120, 120);
   }
-  
-  @keyframes no {
-    0% {
-      background-color: rgb(120, 120, 120);
-    }
-  
-    50% {
-      background-color: rgb(255, 0, 0);
-    }
-  
-    100% {
-      background-color: rgb(120, 120, 120);
-    }
+
+  50% {
+    background-color: rgb(255, 0, 0);
   }
-  
-  @keyframes no2 {
-    0% {
-      background-color: rgb(120, 120, 120);
-    }
-  
-    50% {
-      background-color: rgb(255, 0, 0);
-    }
-  
-    100% {
-      background-color: rgb(120, 120, 120);
-    }
+
+  100% {
+    background-color: rgb(120, 120, 120);
   }
-  
-  @keyframes no3 {  
-    0% {
-      background-color: rgb(120, 120, 120);
-    }
-  
-    50% {
-      background-color: rgb(255, 0, 0);
-    }
-  
-    100% {
-      background-color: rgb(120, 120, 120);
-    }
+}
+
+#popup {
+  overflow: scroll;
+  position: fixed;
+  top: 40%;
+  left: 15%;
+  width: 70%;
+  height: 40%;
+  text-align: center;
+  background-color: white;
+  border-radius: 10px;
+  border: 5px solid black;
+  box-shadow: 10px 10px 50px;
+  padding: 5px;
+  display: none;
+}
+
+#popup button,
+#modes button {
+  background-color: #96d35f;
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 15px;
+  border: 0px
+}
+
+@keyframes greens {
+  0% {
+    background-color: rgb(120, 120, 120)
   }
-  
-  #popup{
-    
-    position: absolute;
-    top:40%;
-    right: 25%;
-    width: 50%;
-    height: 30%;
-    text-align: center;
-    background-color: white;
-    border-radius: 10px;
-    border: 5px solid black;
-    box-shadow: 10px 10px
-    50px;
-    padding: 5px;
+
+  50% {
+    background-color: rgb(10, 255, 25)
+  }
+
+  100% {
+    background-color: rgb(120, 120, 120)
+  }
+}
+
+.animd {
+  animation: greens;
+  animation-duration: 1s;
+}
+
+.lose {
+  animation: no;
+  animation-duration: 1s;
+}
+
+.large {
+
+  font-size: 60px;
+  background-color: rgb(143, 143, 143);
+  width: 350px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#modes {
+  width: 250px;
+  height: 150px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 10px 10px 50px;
+}
+
+body {
+  font-family: monospace, Helvetica, sans-serif;
+}
+
+#modes button {
+  margin-top: auto;
+  text-align: center;
+}
+
+#modes {
+  margin: 50px;
+  padding: 50px
+}
+
+#memo {
+  font-size: 50px;
+  width: 300px;
+  height: 50px;
+  border-radius: 10px;
+}
+
+.gb {
+  background-color: #96d35f;
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 15px;
+  border: 0px;
+}
+
+.relat {
+  position: relative;
+  bottom: 50px;
+  margin-right: 10px;
+}
+
+button {
+  font-family: monospace, Helvetica, sans-serif;
+  color: black
+}
+
+details li {
+  list-style-type: none
+}
+
+@media screen and (orientation: portrait) {
+  #hornav {
+    display: none
+  }
+}
+
+@media screen and (orientation: landscape) {
+  #vertnav {
     display: none;
   }
-  
-  #popup button, #modes button{
-    background-color: #96d35f;
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
-    font-size: 15px;
-    border: 0px
-  }
-  
-  @keyframes greens{
-    0%{background-color: rgb(120,120,120)}
-    50%{background-color: rgb(10,255,25)}
-    100%{background-color: rgb(120,120,120)}
-  }
-  
-  .animd{
-    animation: greens;
-    animation-duration: 1s;
-  }
-  
-  .lose{
-    animation: no;
-    animation-duration: 1s;
-  }
-  .large{
-    
-    font-size: 60px;
-    background-color: rgb(143, 143, 143);
-    width: 350px;
-    text-align: center;
-    border-radius: 10px;
-  }
-  #modes{
-    width:250px;
-    height: 150px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 10px 10px 50px;
-  }
-  body{
-    font-family: monospace, Helvetica, sans-serif;
-  }
-  #modes button{
-    margin-top: auto;
-    text-align: center;
-  }
-  #modes{
-    margin: 50px;
-    padding: 50px
-  }
-  #memo{
-    font-size: 50px;
-    width: 300px;
-    height: 50px;
-    border-radius: 10px;
-  }
-  .gb{
-    background-color: #96d35f;
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
-    font-size: 15px;
-    border: 0px;
-  }
-  .relat{
-    position: relative;
-    bottom: 50px;
-    margin-right: 10px;
-  }
-  button{
-    font-family: monospace, Helvetica, sans-serif;
-  }
-  
+}
+
+#hornav li {
+  list-style-type: none;
+  float: left;
+  margin: 20px;
+  height: auto;
+  width: 125px
+}
+
+#hornav li:hover {
+  color: #858585;
+}
+
+#hornav {
+  position: relative;
+  bottom: 30px;
+  background-color: #b0b0b0;
+  width: auto;
+  box-sizing: border-box;
+  border: 5px solid #b0b0b0;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  border-radius: 10px;
+  overflow-x: hidden;
+}
+
+#vertnav div {
+  width: auto;
+  height: 30px
+}
+
+#vertnav div:hover {
+  background-color: rgb(186, 186, 186);
+  opacity: 0.6
+}
+
+#vertnav li {
+  font-size: 18px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.bcool {
+  border-bottom: 3px solid #b0b0b0;
+}
+
+#superior {
+  border-bottom: 3px solid #b0b0b0;
+  border-top: 3px solid #b0b0b0
+}
+
+#inferior {
+  border: none
+}
+
+#vertnav {
+  margin-bottom: 50px;
+  margin-top: 0px;
+  border: 3px solid #b0b0b0;
+  border-radius: 10px;
+  background-color: #b1b1b1
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.WIDE {
+  height: 50px;
+  border: none
+}
+
+.wl {
+  height: auto;
+  width: 1px;
+  background-color: black;
+}
