--- a/style3.css
+++ b/style3.css
@@ -260,13 +260,13 @@ button {
   font-size: 100px
 }
 
-@media screen and (orientation: portrait) {
+@media (max-width:767px) {
   #hornav {
     display: none
   }
 }
 
-@media screen and (orientation: landscape) {
+@media (min-width:768px) {
   #vertnav {
     display: none;
   }
